# LATEST_BLS

./: .gitignore  Anchor.toml  README  README.md
programs/latest_bls/: Cargo.toml
programs/latest_bls/src/: lib.rs  lib_bls_aggregation_on_chain.rs  utils.rs
tests/: Cargo.toml
tests/src/: test_initialize.rs
