[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
latest_bls = { version = "0.1.0", path = "../programs/latest_bls" }
solana-sdk = "1.18.26"
solana-alt-bn128-bls = { git = "https://github.com/Astewart1510/solana-alt-bn128-bls", branch = "master" }
solana-program = "^1.18"
solana-bn254 = "2.1.0"
anchor-lang = { version = "^0.30.1", features = [
  "init-if-needed",
  "allow-missing-optionals",
] }
anchor-spl = { version = "^0.30.1" }
tokio ={ version="1.43.0", features = ["full"] } 
dirs = "6.0.0"
